# docs/swagger.json
@@ -13,6 +13,196 @@
         }
     },
     "paths": {
+        "/atados/v1/action": {
+            "get": {
+                "description": "get all actions by pagination router",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Action"
+                ],
+                "summary": "get all actions by pagination router",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetAllActionsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
+            "post": {
+                "description": "create action router",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Action"
+                ],
+                "summary": "create action router",
+                "parameters": [
+                    {
+                        "description": "create action",
+                        "name": "createActionRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateActionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/CreateActionResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/atados/v1/action/{id}": {
+            "get": {
+                "description": "get action by id router",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Action"
+                ],
+                "summary": "get action by id router",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id action",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetActionByIDResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
+            "put": {
+                "description": "update action router",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Action"
+                ],
+                "summary": "update action router",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id action",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "update action",
+                        "name": "updateActionRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/UpdateActionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Action updated successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
+            "delete": {
+                "description": "delete action router",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Action"
+                ],
+                "summary": "delete action router",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id action",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Action deleted successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/atados/v1/health": {
             "get": {
                 "description": "healthcheck router",
@@ -38,7 +228,7 @@
         },
         "/atados/v1/voluntary": {
             "get": {
-                "description": "get all products by pagination router",
+                "description": "get all voluntarys by pagination router",
                 "consumes": [
                     "application/json"
                 ],
@@ -48,7 +238,7 @@
                 "tags": [
                     "Voluntary"
                 ],
-                "summary": "get all products by pagination router",
+                "summary": "get all voluntarys by pagination router",
                 "parameters": [
                     {
                         "type": "integer",
@@ -77,7 +267,7 @@
                 }
             },
             "post": {
-                "description": "create product router",
+                "description": "create voluntary router",
                 "consumes": [
                     "application/json"
                 ],
@@ -87,11 +277,11 @@
                 "tags": [
                     "Voluntary"
                 ],
-                "summary": "create product router",
+                "summary": "create voluntary router",
                 "parameters": [
                     {
-                        "description": "create product",
-                        "name": "createProductRequest",
+                        "description": "create voluntary",
+                        "name": "createVoluntaryRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -103,7 +293,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/CreateVoluntaryVO"
+                            "$ref": "#/definitions/CreateVoluntaryResponse"
                         }
                     },
                     "500": {
@@ -115,7 +305,7 @@
         },
         "/atados/v1/voluntary/{id}": {
             "get": {
-                "description": "get product by id router",
+                "description": "get voluntary by id router",
                 "consumes": [
                     "application/json"
                 ],
@@ -125,11 +315,11 @@
                 "tags": [
                     "Voluntary"
                 ],
-                "summary": "get product by id router",
+                "summary": "get voluntary by id router",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "id product",
+                        "description": "id voluntary",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -149,7 +339,7 @@
                 }
             },
             "put": {
-                "description": "update product router",
+                "description": "update voluntary router",
                 "consumes": [
                     "application/json"
                 ],
@@ -159,18 +349,18 @@
                 "tags": [
                     "Voluntary"
                 ],
-                "summary": "update product router",
+                "summary": "update voluntary router",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "id product",
+                        "description": "id voluntary",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "update product",
-                        "name": "updateProductRequest",
+                        "description": "update voluntary",
+                        "name": "updateVoluntaryRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -192,7 +382,7 @@
                 }
             },
             "delete": {
-                "description": "delete product router",
+                "description": "delete voluntary router",
                 "consumes": [
                     "application/json"
                 ],
@@ -202,11 +392,11 @@
                 "tags": [
                     "Voluntary"
                 ],
-                "summary": "delete product router",
+                "summary": "delete voluntary router",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "id product",
+                        "description": "id voluntary",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -228,6 +418,83 @@
         }
     },
     "definitions": {
+        "Action": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "institution": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "neighborhood": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "ActionPagination": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "CreateActionRequest": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "institution": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "neighborhood": {
+                    "type": "string"
+                }
+            }
+        },
+        "CreateActionResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "CreateVoluntaryRequest": {
             "type": "object",
             "properties": {
@@ -245,11 +512,57 @@
                 }
             }
         },
-        "CreateVoluntaryVO": {
+        "CreateVoluntaryResponse": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "GetActionByIDResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "institution": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "neighborhood": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "GetAllActionsResponse": {
+            "type": "object",
+            "properties": {
+                "actions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Action"
+                    }
+                },
+                "pagination": {
+                    "$ref": "#/definitions/ActionPagination"
                 }
             }
         },
@@ -289,6 +602,29 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "UpdateActionRequest": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "institution": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "neighborhood": {
                     "type": "string"
                 }
             }
